@@ -15,6 +15,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+common/readable: Improve performance by minimizing string copies.
 server/c_object.c: Fix possible buffer overflows.
 common/item.c: Fix possible buffer overflows; improve performance by
    minimizing string copies; fix bugs because of missing braces; make sure
